--- a/Clean Code/창발성.md
+++ b/Clean Code/창발성.md
@@ -11,7 +11,7 @@
 
 ## 1. 모든 테스트 실행
 설계는 의도한 대로 돌아가는 시스템을 내놓아야 한다.  
-문서로는 시스템을 완벽하게 설게해도, 시스템이 의도한 대로 돌악가는 지 검증할 방법이 없다면,
+문서로는 시스템을 완벽하게 설게해도, 시스템이 의도한 대로 돌아가는 지 검증할 방법이 없다면,
 문서 작성의 노력은 물거품이 된다.  
 
 중요한 건, **테스트가 가능한 시스템을 만들려고 애쓰면, 설계 품질이 더불어 높아진다.**  
