--- a/Clean Code/동시성Ⅱ.md
+++ b/Clean Code/동시성Ⅱ.md
@@ -1,4 +1,4 @@
-### 성능을 검증
+## 성능을 검증
 
 ```kotlin
 @Test(timeout = 1000)
@@ -21,6 +21,7 @@ fun shouldRunUnder10Seconds() {
    - 프로세서 연산에 시간을 많이 보낸다면, 새로운 하드웨어를 추가해 성능을 높여야 한다.
    - 스레드를 늘린다고 빨라지진 않는데, CPU 사이클은 한계가 존재하기에.
 
+## 다중 스레드에서 발생 가능한 경우
 
 ```kotlin
 class Example {
@@ -95,7 +96,7 @@ class Example {
 
 - `getNextId()` 를 synchronized 로 선언하면 문제는 해결된다.
 
-### CAS 연산(non blocking)
+## CAS 연산(non blocking)
 
 ```kotlin
 @Synchronized
@@ -119,12 +120,12 @@ fun incrementValue() {
 - **CAS 연산**은 문제(같은 값을 수정하는)가 없는지를 계속 감시(시도)한다.
   - 항상 락을 거는 게 아닌 문제를 감지해서 문제가 없으면 수행하고 있으면 계속 시도하는 형태
 
-### 데드락
+## 데드락
 
 - 서로가 서로(스레드)를 기다리는 상황
 - 이도 저도 못하는 상황
 
-**조건**
+### 조건
 1. 상호 배제
    > 한 자원을 공유하지만, 해당 자원을 여러 스레드가 동시에 사용 X, 자원의 수가 제한적
    - 조건 깨기
