2장. 코틀린 기초 - in, 예외

--- a/Kotlin In Action/2. 코틀린 기초.md
+++ b/Kotlin In Action/2. 코틀린 기초.md
@@ -111,3 +111,61 @@ if (color is COLOR.YELLOW) {
 하지만 위처럼 변수가 `var` 이거나, 커스텀 접근자를 사용한 변수라면 스마트 캐스팅이 불가능하다.
 
 확실한 수 없다. 위 `if` 에서 타입을 검사해도 내부 블록에서 바뀔 줄 누가 아나(멀티 스레드 환경에서 변경할 수도 있다.)
+
+## in 으로 컬렉션이나 범위의 원소 검사
+
+> 비교가 가능한 클래스라면(`Comparable` 인터페이스를 구현한) 그 클래스의 인스턴스 객체를 사용해 범위를 만들 수 있다.
+>
+
+```kotlin
+data class Person(val name: String, val age: Int): Comparable<Person> {
+    override fun compareTo(other: Person): Int {
+        return this.age - other.age
+    }
+}
+
+val person1 = Person("Alice", 30)
+val person2 = Person("Bob", 25)
+val person3 = Person("Charlie", 20)
+
+fun main() {
+    // person3가 person2와 person1 사이에 있는지 확인
+    if (person2 in person3..person1) {
+        println("${person3.name} is within the age range.")
+    }
+}
+```
+
+## 코틀린의 예외 처리
+
+kotlin 에서 `throw 는 식`이라 다른 식에 포함될 수 있다.
+
+```kotlin
+val percentage = 
+	if (number in 0..100) 
+		number
+	else 
+		throw IllegalArgumentException(
+			"A percentage value must be between 0 and 100: $number"
+		)
+```
+
+함수에서 예외가 발생했을 때 `catch` 하지 않으면 함수 호출 스택을 거슬러 올라가면서 예외를 처리하는 부분이 나올 때까지 예외를 다시 던진다.
+
+코틀린에선 `try - catch` 도 식이다.
+
+### 체크, 언체크 예외
+
+> 자바에서 예외는 **체크 예외**와 **언체크 예외**로 구분되는데, 체크 예외는 예외를 명식적으로 처리해야 한다.
+>
+
+`catch` 를 하지 않으면, `throws` 절에 명시해서 본인을 호출한 상위 함수로 예외를 던지거나 해야한다.
+
+<aside>
+💡 하지만 코틀린은 체크 예외와 언체크 예외를 구별하지 않고, 프로그래머가 **예외를 잡아도, 잡아내지 않아도** 된다.
+
+</aside>
+
+자바에서 체크 예외 처리가 강제이다 보니 의미없는 코드가 흔하기 마련이였다.
+
+- 체크 예외는 정확히 처리 안하기 마련이였고, 언체크 예외는 강제가 아니라, 신경 쓰지 못하고 예외가 일어난 경우도 다반사였다.
