--- a/Kotlin In Action/3. 함수 정의와 호출.md
+++ b/Kotlin In Action/3. 함수 정의와 호출.md
@@ -110,3 +110,151 @@ fun String.lastChar(): Char = this.get(this.length - 1)
 하지만 확장 함수 내부에선 수신 객체의 `private` 함수, `protected` 함수는 사용할 수 없다.
 
 그래서 캡슐화를 깨진 않는다.
+
+### 자바에서 코틀린 확장 함수 사용
+
+자바에서 확장 함수를 호출할 땐 정적인 메서드라서 런타임 시점에 부가 비용이 들지 않는다.
+
+방식은 아래와 같다.
+
+```kotlin
+// StringUtil.Kt
+fun String.lastChar()
+
+// kotlin
+"Java:.lastChar()
+
+// java
+char c = StringUtilKt.lastChar("Java")
+```
+
+### 확장 함수는 오버라이드가 불가능
+
+다음과 같이 일반적인 클래스 상하관계에서의 오버라이드를 보자
+
+```kotlin
+open class View {
+	open fun click() = println("View Cliked")
+}
+
+class Button: View() {
+	override fun click() = pritln("Button Clicked")
+}
+
+fun main() {
+	val view: View = Button()
+	view.click()
+}
+
+// 출력
+Button Clicked
+```
+
+이처럼 View 타입을 명시한 `view` 변수를 선언해도 오버라이드한 함수를 호출할 땐 실제 타입(동적 타입)에 따라 호출할 메서드가 결정된다.
+
+→ 동적 디스패치 (런타임 시점에 객체 타입에 따라 동적으로 호출될 대상 메서드를 결정하는 방식)
+
+하지만 확장 함수 는 클래스의 일부가 아니며 밖에 선언된다.(정적인 메서드이다 → 오버라이드가 먹히지 않는다)
+
+하위 클래스에서 이름과 파라미터가 동일한 확장 함수를 정의해도 정적 타입에 의해 결정된다 (위의 오버라이드 함수와는 반대)
+
+→ 정적 디스패치(컴파일 시점에 알려진 변수 타입에 따라 정해진 메서드를 호출)
+
+```kotlin
+fun View.showOff() = println("i'm view")
+fun Button.showOff() = println("i'm a button")
+
+fun main() {
+	val view: View = Button()
+	view.click()
+}
+
+// 출력
+i'm a view
+```
+
+### 부록.
+
+확장 함수와 멤버 함수간의 우선순위는 멤버 함수가 더 높다
+→ 클래스 내부의 멤버 함수와 해당 클래스의 확장 함수의 이름과 시그니처(함수의 구성요소(파라미터)) 가 동일하다면 확장함수가 아닌 멤버 함수가 호출된다.
+
+## 확장 프로퍼티
+
+> 기존 클래스 객체에 대한 프로퍼티 형식의 구문으로 사용할 수 있는 API 를 추가할 수 있다.
+>
+
+```kotlin
+val String.lastChar: Char
+	get() = get(length -1)
+```
+
+프로퍼티지만 상태를 저장할 순 없다. (백킹 필드가 없다.)
+
+→ `val String.lastChar = 2` 이런 코드가 불가능하다.
+
+![Untitled](3%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%92%E1%85%A1%E1%86%B7%E1%84%89%E1%85%AE%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%8B%E1%85%B4%E1%84%8B%E1%85%AA%20%E1%84%92%E1%85%A9%E1%84%8E%E1%85%AE%E1%86%AF%20c4702e5ae66345fe8fd7b12e914dd195/Untitled.png)
+
+커스텀 게터가 필수이다.
+
+```kotlin
+val String.lastChar: Char
+    get() = this[length-1]
+```
+
+```kotlin
+val String.lastChar: Int
+	get() = 3
+```
+
+이렇게 할 순 있지만 이것이 상태를 가진다고는 할 수 없다.
+
+해당 프로퍼티를 호출할 때마다 게터가 호출될 테니
+
+### 변경 가능한 확장 프로퍼티
+
+```kotlin
+var StringBuilder.lastChar: Char
+	get() = get(length -1)
+	set(value: Char) {
+		this.setCharAt(length - 1, value)
+	}
+```
+
+이런식으로 하면 게터는 물론 세터로 아래처럼 수신객체를 변경하도록 할 수도 있다.
+
+```kotlin
+val sb = StringBuilder(”Kotlin?”)
+sb.lastChar = “!”
+println(sb.toString())
+
+-> 
+Kotlin!
+```
+
+## 컬렉션 처리: 가변 길이 인자, 중위 함수, 라이브러리 지원
+
+### 가변 길이 인자
+
+> `vararg`
+>
+
+listOf 함수의 파라미터를 확인하자.
+
+가변 길이 인자에 배열 또는 리스트를 넘겨주고 싶다면
+
+자바에선 바로 넘겨주면 되지만
+
+코틀린에선 명시적으로 풀어서 해야한다. 스프레드 연산자(*)가 그런 작업을 지원
+
+```kotlin
+fun main(args: Array<String>) {
+	val list = listOf("args: ", *args)
+	println(list)
+}
+```
+
+### 중위 함수(infix)
+
+인지가 하나뿐인 함수에만 적용할 수 있다.(infix 를 붙일 수 있다.)
+
+확장 함수, 일반 메서드 모두 중위 호출을 사용할 수 있다.
