3장 함수 정의와 호출 - 문자열과 정규식, 로컬 함수와 확장

--- a/Kotlin In Action/3. 함수 정의와 호출.md
+++ b/Kotlin In Action/3. 함수 정의와 호출.md
@@ -258,3 +258,81 @@ fun main(args: Array<String>) {
 인지가 하나뿐인 함수에만 적용할 수 있다.(infix 를 붙일 수 있다.)
 
 확장 함수, 일반 메서드 모두 중위 호출을 사용할 수 있다.
+
+## 문자열과 정규식 다루기
+
+### 3중 따옴표
+
+3중 따옴표 문자열에선 역슬래시(\)를 포함한 어떤 문자도 이스케이프할 필요가 없다.
+
+```kotlin
+val string1 = "(.+)\\."
+println(string1)  // Output: (.+)\.
+
+val string2 = """(.+)\."""
+println(string2)  // Output: (.+)\.
+```
+
+### 여러 줄 3중 따옴표 문자열
+
+> 3중 따옴표를 쓰면 줄바꿈이 있는 텍스트를 쉽게 문자열로 만들 수 있다.
+>
+
+```kotlin
+val kotlinLogo = """|  //
+										.| //
+										.| //"""
+										
+>> println(kotlinLogo.trimMargin("."))
+
+|  //
+| //
+|/ \
+```
+
+여러 줄 문자열(3중 따옴표를 쓴)에는 들여쓰기 줄 바꿈을 포함한 모든 문자가 들어간다.
+
+깨끗하게 표현하고 싶으면 위 예시처럼 들여쓰기를  하고 끝부분에 특별한 문자열을 표시한 뒤, `trimMargin` 을 사용해서 공백을 제거하면 된다
+
+문자열 템플릿도 사용할 수 있다.
+
+하지만 $ 자체를 표현하고 싶다면 이스케이프를 할 수 없어서(\$ ← 이게 먹히지 않는다)
+
+아래처럼 문자열 템플릿 내부에 ‘$’ 로 넣어줘야 한다.
+
+```kotlin
+val price = “””${’$’}99.9”””
+```
+
+테스트할 때 여러 줄 문자열이 요긴하게 쓰인다.
+
+**여러 줄의 텍스트를 테스트하고 싶을 때** 이스케이프를 일일이 추가하거나 외부 파일의 텍스트를 불러오지 말고
+
+**단지 3중 따옴표 내부에 HTML, text 를 그냥 넣어주면 된다.**
+
+더 보기 좋게 하려면 `trimMargin` 을 쓰면 된다.
+
+## 로컬 함수와 확장
+
+> 로컬함수는 함수 내부에 있는 함수이다.
+>
+
+→ 다른 곳에서 로컬 함수를 사용할 수 없다.
+
+### 로컬 함수를 확장 함수로 추출하는 것에 대한 생각.
+
+기존의 필자는 확장 함수를 선호하지 않았다.
+
+→ 기존 라이브러리의 확장 함수를 만들면 자동완성으로 뜨게 되어
+
+같은 팀원들이 라이브러리 내부에 존재하는 함수로 착각하고 사용할 수도 있게 되기 때문에
+
+그런데 라이브러리가 아닌 개발자 본인이 만든 클래스의 함수를 확장 함수로 추출한다.
+
+→ 이건 내부에 있으나 외부에 있으나 딱히 사용하는 곳에서의 차이는 없다.
+
+확장 함수로 빼게 되면 장점은 클래스 내부 코드가 깔끔해진다.
+
+→ 이 확장 함수가 로컬 함수로서 하나의 함수 내부에만 사용된다면, 클래스 내부에 있어도 오히려 보기에 복잡하기만 하다.
+
+확장 함수로 빼게되면 부작용은 해당 클래스의 private 멤버 함수, 변수를 참조할 순 없다.
