4장 클래스, 객체, 인터페이스 - 가시성 변경자, 내부, 중첩 클래스

--- a/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
+++ b/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
@@ -2,8 +2,6 @@
 
 # 클래스
 
-## 구현 및 상속에 관하여
-
 ### 구현 인터페이스가 두 개 이상
 
 구현하는 인터페이스가 두 개 이상이며, 이름과 시그니처가 동일한 디폴트 메서드가 여러개라면?
@@ -41,9 +39,9 @@ class Button: Clickable, Focusable {
 
 그래서 이펙티브 자바에선 **상속을 위한 설계와 문서를 갖추거나, 그럴 수없다면 상속을 금지하란** 조언을 한다.
 
- → 그렇기에 코틀린은 자바와 다르게 기본적으로 final 로 만들었다. (상속이 불가능하다.)
+→ 그렇기에 코틀린은 자바와 다르게 기본적으로 final 로 만들었다. (상속이 불가능하다.)
 
- → 자바는 기본적으로 open 이라 final 로 명시하지 않으면 상속이 가능해서 문제가 생길 수 있다.
+→ 자바는 기본적으로 open 이라 final 로 명시하지 않으면 상속이 가능해서 문제가 생길 수 있다.
 
 ### **final 이 얻을 수 있는 이익**
 
@@ -70,7 +68,7 @@ class Button: Clickable, Focusable {
 
 **그래서 보다시피 if 로 null 체크를 했는데도 nullable 이다.**
 
- 오버라이드한 함수, 프로퍼티를 호출할 땐 실제 타입(동적 타입)에 따라 호출할 메서드가 결정된다.
+오버라이드한 함수, 프로퍼티를 호출할 땐 실제 타입(동적 타입)에 따라 호출할 메서드가 결정된다.
 
 → 동적 디스패치 (런타임 시점에 객체 타입에 따라 동적으로 호출될 대상 메서드를 결정하는 방식)
 
@@ -92,3 +90,56 @@ class Button: Clickable, Focusable {
 기본적으로 본문이 없으면 자동으로 `abstract` 변경자 취급
 
 본문이 있으면 `open` 변경자 취급
+
+### 코틀린의 가시성 변경자와 자바
+
+코틀린에서 `public`, `protected` 변경자들은 컴파일된 자바 바이트코드 안에서도 그대로 유지.
+
+`private` 는 자바에서 클래스를 `private` 로 만들 수 없어서, `패키지 - 전용 클래스`(자바에서 기본 가시성 변경자) 로 컴파일된다.
+
+코틀린에서 `intenral(모듈 내부)` 은 자바에서 알맞은 가시성이 없다.
+
+→ 따라서 바이트 코드에선 `public` 으로 변경된다,
+
+→ 그러면? 자바 코드에선 외부 모듈에서 접근할 수 있게된다.
+
+→ 하지만 `internal` 멤버의 이름이 보기 나쁘게 변경된다.
+
+이러면 효과가
+
+1. 오버라이드를 막아준다.
+    1. 한 클래스를 외부 모듈에서 상속한 경우, 해당 하위 클래스 내부 메서드 이름이 같아져서, 의도적이지 않게 오버라이드 될 수 있다.
+    2. 뭐냐면 외부 모듈에서 상속한 클래스가 `internal` 로 선언되었는데, 메서드 이름이 같아버리면 의도적이지 않게 부모 클래스의 메서드가 오버라이드 되어 호출될 수도 있다.
+2. 개발자가 사용하는 걸 막아준다.
+    1. 실수로 `internal` 을 모듈 외부에서 사용하는 걸 막아줄 수 있다.
+        1. 멤버 이름이 보기 나빠서, “아 이거 `internal` 로 선언되어 있구나” 할 수 있다.
+
+
+### 내부 클래스, 중첩 클래스
+
+> 코틀린에서 기본적으로 중첩 클래스
+>
+
+중첩 클래스 - 바깥쪽 클래스 인스턴스에 대한 **`접근 권한`**이 없다.
+
+<aside>
+💡 왜 코틀린은 기본으로 중첩 클래스가 되도록 그렇게 만들었을까?
+
+</aside>
+
+여러 이유가 있겠지만 예시로 직렬화 부분에서 문제가 존재한다.
+
+자바에서 내부 클래스가 `Serializable` 하다고 하자.
+
+그럼 해당 내부 클래스를 직렬화한다면? → 에러가 발생한다.
+
+왜?? → 내부 클래스가 외부 클래스에 대한 참조가 생긴다. → 외부 클래스는 직렬화가 되지 않는다. → 내부 클래스도 되지 않는다.
+
+그러니깐 참조하는 모든 클래스가 `Serializable` 이 되어야 가능한데, 묵시적으로 외부 클래스에 대한 참조때문에 불가능하다는 `NotSerializableException` 예외가 일어나는 거다.
+
+> 안드 개발하다 API 통신 응답 클래스(`response`) 가 `Serializable` 하고 해당 클래스 내부의 클래스들 모두도 `Serializable` 해야 하는 것과 일맥상통하는 이야기
+>
+
+그래서 코틀린에선 아무런 변경자를 붙이지 않고 클래스 내부에 클래스를 선언하면 내부 클래스는 외부 클래스에 대한 참조가 없다.
+
+내부 클래스를 하려면 `inner` 변경자를 붙여야 한다.
