--- a/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
+++ b/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
@@ -10,18 +10,18 @@
 
 ```kotlin
 interface Clickable {
-	fun showOff() = println("I'm clickable!")
+    fun showOff() = println("I'm clickable!")
 }
 
 interface Focusable {
-	fun showOff() = println("I'm focusable")
+    fun showOff() = println("I'm focusable")
 }
 
-class Button: Clickable, Focusable {
-	override fun showOff() {
-		// super<Clickable>.showOff()
-		super<Focusable>.showOff()
-	}
+class Button : Clickable, Focusable {
+    override fun showOff() {
+        // super<Clickable>.showOff()
+        super<Focusable>.showOff()
+    }
 }
 ```
 
@@ -143,3 +143,195 @@ class Button: Clickable, Focusable {
 그래서 코틀린에선 아무런 변경자를 붙이지 않고 클래스 내부에 클래스를 선언하면 내부 클래스는 외부 클래스에 대한 참조가 없다.
 
 내부 클래스를 하려면 `inner` 변경자를 붙여야 한다.
+
+### Sealed Class
+
+`else` 문의 문제
+
+클래스 계층 구조에서 `else` 를 왜 피할까?
+
+단순히 가독성이 좋지 않아서, 나올 하위 클래스들은 정해져 있는데 `else` 로 처리하는 게 보기 좋지 않으니 라고 생각했다.
+
+하지만 큰 문제는 유지보수였다.
+
+하위 클래스가 계속 추가된다고 해보자.
+
+그럴 때마다 `if - else` 내부에 알맞은 분기를 정해야 한다.
+
+그런데 깜빡했다?? → `else` 로 치부되어 버린다.
+
+하지만 `sealed class` 를 보라
+
+하위 클래스가 추가된다면 컴파일 단에서 분기 처리하라고 잡아준다.
+
+개발자의 실수를 코드가 잡아주는 거다.
+
+단순하지만 생각하지 못 한 문제점이였다.
+
+## 클래스 선언
+
+### 생성자의 val
+
+```kotlin
+// 1
+class User(val nickname: String)
+
+// 2
+class User(nickname: String)
+```
+
+두 선언이 무슨 차이가 있을까?
+
+먼저 용어부터.
+
+프로퍼티 - 클래스 내부에 선언되는 값
+
+파라미터(생성자) - 클래스 선언과 함께 들어오는 값(위에선 `nickname`)
+
+무슨 차이나면
+
+2번으로 User 를 생성하면 단순히 값을 받는거다.
+
+1번으로 User 를 생성하면 nickname 이란 프로퍼티가 생성된다.
+
+그렇기에 2번으로 생성하고 외부에서 해당 생성자를 사용한다면 프로퍼티가 아니기에 에러가 발생한다.
+
+```kotlin
+class User(name: String) 
+
+fun main() {
+    val user = User("희직")
+    println(user.name) // Unresolved reference: name
+}
+```
+
+### 부 생성자
+
+코틀린에서 부 생성자를 사용해 본 적이 없는 것 같다.
+
+항상 주 생성자를 사용했다.(클래스 헤더에 정의)
+
+왜 그럴까? → 내가 자바에 익숙하지 않다.
+
+자바에선 부 생성자를 쓸 일이 많은 걸로 알지만 코틀린에선 디폴트 파라미터, 이름 붙인 파라미터로 대부분 해결 가능했다.
+
+그럼 언제 사용할까?
+
+1. 아래 처럼 생성자들끼리 서로 생성을 위임할 수 있다.
+
+```kotlin
+class Order {
+    var orderId: Int
+    val description: String
+
+    constructor(orderId: Int) : this(orderId, "HIHII") {
+        this.orderId = orderId
+    }
+
+    constructor(orderId: Int, description: String)  {
+        this.orderId = orderId
+        this.description = description + "ByeBye"
+    }
+}
+
+fun main() {
+    val order1 = Order(1)
+    println(order1.description)
+}
+```
+
+1. 또는 생성 로직을 상위 클래스 기반으로 할 수 있다.(생성 위임)
+
+```kotlin
+open class Person(val name: String, val age: Int) {
+    init {
+        println("Person initialized with name: $name and age: $age")
+    }
+}
+
+class Student : Person {
+    val studentId: Int
+
+    // 보조 생성자
+    constructor(name: String, age: Int, studentId: Int) : super(name, age) {
+        this.studentId = studentId
+        println("Student initialized with studentId: $studentId")
+    }
+}
+
+fun main() {
+    val student = Student("John Doe", 20, 12345)
+    // 출력:
+    // Person initialized with name: John Doe and age: 20
+    // Student initialized with studentId: 12345
+}
+```
+
+### 프로퍼티 게터, 세터
+
+게터와 세터는 알고는 있지만 많이 쓰진 않았다.
+
+여기서 다시 어느정도 개념을 이해하자.
+
+```kotlin
+class Person {
+    var name: String = "Unknown"
+        get() = field.toUpperCase() // 커스터마이징된 게터
+        set(value) {
+            field = value.trim() // 커스터마이징된 세터
+        }
+
+    var age: Int = 0
+        get() {
+            println("Age getter called")
+            return field
+        }
+        set(value) {
+            if (value > 0) {
+                field = value
+            } else {
+                println("Age must be positive")
+            }
+        }
+}
+
+fun main() {
+    val person = Person()
+    
+    // name 프로퍼티 사용
+    person.name = " John Doe "
+    println(person.name) // "JOHN DOE"
+
+    // age 프로퍼티 사용
+    person.age = 25
+    println(person.age) // "Age getter called" "25"
+    person.age = -5 // "Age must be positive"
+}
+```
+
+이런 식으로 가능한데, 여기서 `field` 는 해당 프로퍼티에 저장된 값이다.
+
+또한 이처럼 게터, 세터를 적용하면 해당 프로퍼티에 값을 읽거나, 수정할 때 항상 게터, 세터를 기반으로 동작한다.
+
+```kotlin
+class LengthCounter {
+	var counter: Int = 0
+		private set
+	
+	fun addWord(word: String) {
+		counter += word.lenght
+	}
+}
+```
+
+위 처럼 counter 프로퍼티에 외부에서 읽을 순 있지만, 수정은 불가하도록 가능하다.
+
+→ `viewModel` 에서 상태값을 stateFlow 나 liveData 를 `val` 로 다시 wrapping 하는 것과 유사한 느낌
+
+### data class
+
+흔히들 데이터 클래스는 `toString()`, `equals()`, `hashcode()`  등의 메서드를 자동으로 생성해준다고들 하고, 나도 그렇게 알고 있었다.
+
+그런데 사실 위 함수들은 모든 클래스에 기본적으로 존재한다.
+
+그럼 data class 는 위 함수들을 생성하는 게 아니라, 자동으로 `override` 해준다란 표현이 맞다.
