--- a/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
+++ b/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
@@ -1,5 +1,3 @@
-# 4장: 클래스, 객체, 인터페이스
-
 # 클래스
 
 ### 구현 인터페이스가 두 개 이상
@@ -10,18 +8,18 @@
 
 ```kotlin
 interface Clickable {
-    fun showOff() = println("I'm clickable!")
+	fun showOff() = println("I'm clickable!")
 }
 
 interface Focusable {
-    fun showOff() = println("I'm focusable")
+	fun showOff() = println("I'm focusable")
 }
 
-class Button : Clickable, Focusable {
-    override fun showOff() {
-        // super<Clickable>.showOff()
-        super<Focusable>.showOff()
-    }
+class Button: Clickable, Focusable {
+	override fun showOff() {
+		// super<Clickable>.showOff()
+		super<Focusable>.showOff()
+	}
 }
 ```
 
@@ -53,7 +51,7 @@ class Button : Clickable, Focusable {
 
 해당 프로퍼티를 다른 클래스가 상속하면서 **커스텀 접근자를 정의함**으로써 스마트 캐스트의 요구 사항을 깰 수 있다.
 
-![Untitled](4%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%8F%E1%85%B3%E1%86%AF%E1%84%85%E1%85%A2%E1%84%89%E1%85%B3,%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6,%20%E1%84%8B%E1%85%B5%E1%86%AB%E1%84%90%E1%85%A5%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%89%E1%85%B3%20ef58f2a2c1d042209201ff21ae16461a/Untitled.png)
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/b7811c85-19db-43c9-9afa-eb8a1faa1680/885d78f2-e7a2-49c6-83a3-aa3b5e2e42ee/Untitled.png)
 
 스마트 캐스팅 조건에는
 
@@ -335,3 +333,64 @@ class LengthCounter {
 그런데 사실 위 함수들은 모든 클래스에 기본적으로 존재한다.
 
 그럼 data class 는 위 함수들을 생성하는 게 아니라, 자동으로 `override` 해준다란 표현이 맞다.
+
+### toString() 은 알겠는데 equals() 랑 hashCode() 는 왜 자동으로 오버라이드 해줄까??
+
+> `data class` 는 데이터를 저장하는 class 이다.
+>
+
+그럼 데이터를 가지고 작업을 할 때, 불편한 부분들을 제거해준거다.
+
+→ 그게 `toString` 과 `equals`, `hashCode` 인데,
+
+`toString` 은 출력을 편하게라면 나머지는?
+
+`equals` 는 비교를 위해서이다.
+
+`equals` 를 재정의 하지 않으면 기본적으로 주소값을 비교한다.
+
+그런데 데이터를 비교한다는 건 일반적으로 데이터 내부 값이 동일한 걸 나타내기에 자동으로 만든다.
+
+그럼 hashCode 는???
+
+여기서 hashCode 란 값은 데이터를 기반으로 특정 로직을 통해서 추출된 값을 의미한다.
+
+문제는 이 추출하는 값을 토대로 비교하는 경우가 있다.
+
+예를 들어, `HashSet` 을 보자
+
+```kotlin
+class Client(val name: String, val postalCode: Int) {
+    override fun equals(other: Any?): Boolean {
+        return this.name == (other as Client).name && postalCode == other.postalCode
+    }
+}
+
+fun main() {
+    val processed = hashSetOf(Client("희직", 123))
+    println(processed.contains(Client("희직", 123)))
+}
+```
+
+이렇게 하면 출력값은 **false** 이다.
+
+하지만 `listOf` 를 쓴다면? 출력값은 **true** 이다.
+
+```kotlin
+fun main() {
+    val processed = listOf(Client("희직", 123))
+    println(processed.contains(Client("희직", 123)))
+}
+```
+
+→ 왜 이런 차이가 있을까?
+
+- `listOf` 는 equals() 에서 정의한대로 프로퍼티의 값을 통해 동등성을 비교한다.
+- `hashSet`은 euqals() 와 hashCode() 둘 다 사용해서 비교한다.
+    - 저장하는 것 자체가 정의된 hashCode()의 반환값인 해시값을 토대로 저장한다.
+    - 정의된 hashCode() 를 통해, 해당 값에 접근해서 확인을 하고, 있을 때
+    - equals() 로 비교하기 때문에 hashCode() 함수의 재정의가 필수이다.
+
+그래서 hashCode() 가 재정의 되지 않으면, 클래스로 복잡한 작업을 수행하면 예상한대로 동작하지 않을 수 있다.
+
+`hashCode()` 를 재정의하지 않으면, 객체 내부 값이 아닌 객체의 주소값을 토대로 값이 반환된다.
