4장 클래스, 객체, 인터페이스 - copy 함수

--- a/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
+++ b/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
@@ -1,3 +1,5 @@
+# 4장: 클래스, 객체, 인터페이스
+
 # 클래스
 
 ### 구현 인터페이스가 두 개 이상
@@ -51,7 +53,7 @@ class Button: Clickable, Focusable {
 
 해당 프로퍼티를 다른 클래스가 상속하면서 **커스텀 접근자를 정의함**으로써 스마트 캐스트의 요구 사항을 깰 수 있다.
 
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/b7811c85-19db-43c9-9afa-eb8a1faa1680/885d78f2-e7a2-49c6-83a3-aa3b5e2e42ee/Untitled.png)
+![Untitled](4%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%8F%E1%85%B3%E1%86%AF%E1%84%85%E1%85%A2%E1%84%89%E1%85%B3,%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6,%20%E1%84%8B%E1%85%B5%E1%86%AB%E1%84%90%E1%85%A5%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%89%E1%85%B3%20ef58f2a2c1d042209201ff21ae16461a/Untitled.png)
 
 스마트 캐스팅 조건에는
 
@@ -394,3 +396,15 @@ fun main() {
 그래서 hashCode() 가 재정의 되지 않으면, 클래스로 복잡한 작업을 수행하면 예상한대로 동작하지 않을 수 있다.
 
 `hashCode()` 를 재정의하지 않으면, 객체 내부 값이 아닌 객체의 주소값을 토대로 값이 반환된다.
+
+### Copy() 함수
+
+데이터 클래스는 불변 클래스로 만드는 게 권장 == 클래스의 프로퍼티(주 생성자가 `val`)
+
+왜?
+
+1. 데이터 클래스의 프로퍼티 상태가 컨테이너 타입의 키 값이 되는 경우에 저장된 후, 변경된다면 컨테이너 내부에 문제가 생긴다. (`HashMap`) 와 같은 경우, 내부 타입의 객체 프로퍼티의 값을 기반으로 해시코드가 생성되고, 해당 해시코드가 키값으로 사용된다.
+
+   그렇기에 키값으로 사용된 해시코드, 해시코드를 생성하는데 기반이 되는 프로퍼티가 변경된다면 내부적으로 문제가 생기는 것이다.
+
+2. 다중스레드에서 불변 객체를 사용한다면, 다른 스레드에서 이를 변경할 수 없으므로 동기화의 필요를 줄일 수 있다.
