4장 클래스, 객체, 인터페이스 - 클래스 위임: by 키워드(feat. 데코레이터 패턴)

--- a/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
+++ b/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
@@ -1,4 +1,4 @@
-# 4장: 클래스, 객체, 인터페이스
+**# 4장: 클래스, 객체, 인터페이스
 
 # 클래스
 
@@ -10,18 +10,18 @@
 
 ```kotlin
 interface Clickable {
-	fun showOff() = println("I'm clickable!")
+    fun showOff() = println("I'm clickable!")
 }
 
 interface Focusable {
-	fun showOff() = println("I'm focusable")
+    fun showOff() = println("I'm focusable")
 }
 
 class Button: Clickable, Focusable {
-	override fun showOff() {
-		// super<Clickable>.showOff()
-		super<Focusable>.showOff()
-	}
+    override fun showOff() {
+        // super<Clickable>.showOff()
+        super<Focusable>.showOff()
+    }
 }
 ```
 
@@ -408,3 +408,207 @@ fun main() {
    그렇기에 키값으로 사용된 해시코드, 해시코드를 생성하는데 기반이 되는 프로퍼티가 변경된다면 내부적으로 문제가 생기는 것이다.
 
 2. 다중스레드에서 불변 객체를 사용한다면, 다른 스레드에서 이를 변경할 수 없으므로 동기화의 필요를 줄일 수 있다.
+
+## 클래스 위임: by 키워드(feat. 데코레이터 패턴)
+
+> 보통 delegate 라고들 하는데, 필자는 공부한 적은 있어도 딱히 사용해본 적은 크게 없다. by lazy 말고는?
+>
+
+그래서 공부를 해도 쓰질 않고, 적용하지 않다보니 까먹기 마련이였는데
+
+그럼 여기서 by 키워드에 다시 공부하고, by lazy 에서 by 가 어떻게, 왜 사용되는지 이해하면 좋겠구나 싶다.
+
+먼저 데코레이터 패턴에 대해 이해해보자.
+
+왜냐면 `by` 가 해당 패턴을 사용할 때 좋다고 한다.
+
+간단한 설명으론
+
+데코레이터 클래스를 만들고, 기존 클래스를 데코레이터 내부에 필드로 유지해서 사용.
+
+먼저 인터페이스를 활용한다.
+
+기존 클래스의 동작을 인터페이스에 정의하고,
+
+기존 클래스는 해당 인터페이스 메서드를 구현한다.
+
+```kotlin
+// 기본 컴포넌트 인터페이스
+interface Coffee {
+    fun cost(): Double
+    fun description(): String
+    fun hihi(): String
+}
+
+// 기본 컴포넌트 구현
+class SimpleCoffee : Coffee {
+    override fun cost(): Double {
+        return 2.0
+    }
+
+    override fun description(): String {
+        return "Simple coffee"
+    }
+
+    override fun hihi(): String {
+        return "hihi"
+    }
+}
+```
+
+이제 필요한 클래스를 만든다.
+
+여기서 포인트는 기존 클래스(활용할 클래스)를 내부에 가지고 있는 것이다.(여기선 decoratedCoffee 의 이름으로 인자를 받는다.)
+
+그러면 실제 상속한 것처럼 기존 클래스를 마음대로 이용할 수 있다.
+
+```kotlin
+class SugarCoffee(private val decoratedCoffee: Coffee) : Coffee {
+    override fun cost(): Double {
+        return decoratedCoffee.cost() + 4.0
+    }
+
+    override fun description(): String {
+        return "i'm sugar"
+    }
+
+    override fun hihi(): String {
+        return decoratedCoffee.hihi()
+    }
+}
+```
+
+```kotlin
+// 예시 사용
+fun main() {
+    val myCoffee: Coffee = SimpleCoffee()
+    val sugarCoffee = SugarCoffee(myCoffee)
+    println("${sugarCoffee.description()} costs ${sugarCoffee.cost()}")
+}
+```
+
+그런데 여기서 문제점은 리소스가 너무 많이든다.
+
+기본 클래스(SimpleCoffee) 의 메소드를 그대로 쓴다해도 `override` 가 필수이다.
+
+여기서 hihi 는 굳이 오버라이드할 필요가 있을까?
+
+이론적으론 없다. 왜냐면 재정의하지 않으니깐.
+
+그런데 Coffee 라는 인터페이스를 구현해서 어쩔 수 없이 무의미한 코드를 작성해야 한다.
+
+그런데 이걸 `by` 를 써서 **위임을** 해주면 변경할 필요가 없는 메서드는 오버라이드하지 않아도 된다.
+
+왜냐면 해당 인터페이스 메서드의 함수를 어떤 객체껄 쓸 지를 지정해주기 때문에.
+
+이번엔 `by` 를 쓴 예시를 보자.
+
+Coffee 와 SimpleCoffee 는 동일하고 SugarCoffee 만 `by` ****를 쓴다.
+
+그럼 보다시피 아래처럼 `hihi()` 를 재정의 하지 않아도 컴파일 에러가 발생하지 않는다.
+
+왜냐?? Coffee 라는 인터페이스에 대한 구현을 인자로 받은 decoratedCoffee 에 위임하고 있는 것이다.
+
+그래서 `hihi()` 는 이미 decoratedCoffee 에서 정의 되어 있기에, 재정의할 필요가 없는 것.!!!!
+
+```kotlin
+class SugarCoffee(private val decoratedCoffee: Coffee) : Coffee by decoratedCoffee {
+    override fun cost(): Double {
+        return decoratedCoffee.cost() + 4.0
+    }
+
+    override fun description(): String {
+        return "i'm sugar"
+    }
+}
+```
+
+여기서 또 중요한 건 `SugarCoffee` 는 Coffee 의 구현 방식에 대한 의존 관계가 생기지 않는다.
+
+`SugarCoffee` 를 사용할 때 원하는 Coffee 구현 객체를 넣어주면 되기에
+
+### 기존에 생각한 상속 대신 데코레이터 패턴을 쓰는 이유(feat. kotlin in action)
+
+데코레이터 패턴은 상속을 피하기 위해 존재한다
+
+상속을 왜 피할까?
+
+→ 자바는 클래스를 생성하면 기본적으로 open 이다.
+
+→ 코틀린은 클래스를 생성하면 기본적으로 final 이다.
+
+왜? 의도치 않은 상속이 문제를 일으킬 수 있어서
+
+→
+
+부모 클래스의 내부 구현체가 변경되거나 새로운 동작이 추가되면
+
+하위 클래스는 그에 맞게 대응을 해줘야한다.
+
+그런데 자바는 기본적으로 open 이라 개발자가 때때로 상속을 염두하지 못하고 바꿀 수 있다.
+
+코틀린에선 open 을 명시해야 상속이 가능하기에, 개발자가 염두하고 변경할 수 있다.
+
+그럼 상속이 불가능한 클래스에 새로운 동작을 추가할 때 어떻게 할까?
+
+상속이 가능하다면?
+
+추가적인 메소드를 가지는 하위 클래스를 새로 만들면 된다.
+
+하지만 상속이 불가능할 때
+
+새로운 동작을 추가하고 싶으면 사용하는 방법이 **데코레이터 패턴**
+
+### 다시 생각한 데코레이터 패턴의 장점
+
+> 그런데 데코레이터 패턴을 써도 결국 기본 클래스를 변경하면 데코레이터 클래스에 영향을 주는 거 아닌가?
+>
+
+상속을 안 쓸 뿐이지 결국 기본 클래스를 참조하고 내부 메서드를 사용하는 건 마찬가지니깐
+
+그럼 상속을 안 쓰고 이걸 쓰는 이유는 뭐지..?
+
+유연하게 기능을 확장할 수 있다. → 조합해서 다양한 기능 추가가 가능
+
+코드로 보자.
+
+위 데코레이터 패턴 예시 코드에서 `MilkCoffee` 가 추가되었다고 하자
+
+```kotlin
+class MilkCoffee(private val decoratedCoffee: Coffee) : Coffee {
+    override fun cost(): Double {
+        return decoratedCoffee.cost() + 3.2
+    }
+
+    override fun description(): String {
+        return decoratedCoffee.description() + " plus milk"
+    }
+
+    override fun hihi(): String {
+        return decoratedCoffee.hihi()
+    }
+}
+```
+
+```kotlin
+fun main() {
+    var myCoffee: Coffee = SimpleCoffee()
+    // 설탕 추가
+    myCoffee = SugarCoffee(myCoffee)
+    // 우유 추가
+    myCoffee = MilkCoffee(myCoffee)
+    // 설탕 추가
+    myCoffee = SugarCoffee(myCoffee)
+
+    println(myCoffee.description())
+    println("costs ${myCoffee.cost()}")
+}
+
+-> 
+Simple coffee plus sugar plus milk plus sugar
+costs 13.2
+```
+
+그러면 데코레이터 패턴에선 이렇게 동적으로 기능을 추가할 수 있다.
+
+상속을 쓰고 위를 구현한다면 `SugarMilkSugarCoffee` 란 클래스를 만들어야 할 것이고, 동적으로 기능이 추가될 때마다 새로운 클래스를 만들어야 할 것이다.**
