4장 클래스, 객체, 인터페이스 - object 키워드: 클래스 선언과 인스턴스 생성

--- a/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
+++ b/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
@@ -1,4 +1,4 @@
-**# 4장: 클래스, 객체, 인터페이스
+# 4장: 클래스, 객체, 인터페이스
 
 # 클래스
 
@@ -10,18 +10,18 @@
 
 ```kotlin
 interface Clickable {
-    fun showOff() = println("I'm clickable!")
+	fun showOff() = println("I'm clickable!")
 }
 
 interface Focusable {
-    fun showOff() = println("I'm focusable")
+	fun showOff() = println("I'm focusable")
 }
 
 class Button: Clickable, Focusable {
-    override fun showOff() {
-        // super<Clickable>.showOff()
-        super<Focusable>.showOff()
-    }
+	override fun showOff() {
+		// super<Clickable>.showOff()
+		super<Focusable>.showOff()
+	}
 }
 ```
 
@@ -611,4 +611,107 @@ costs 13.2
 
 그러면 데코레이터 패턴에선 이렇게 동적으로 기능을 추가할 수 있다.
 
-상속을 쓰고 위를 구현한다면 `SugarMilkSugarCoffee` 란 클래스를 만들어야 할 것이고, 동적으로 기능이 추가될 때마다 새로운 클래스를 만들어야 할 것이다.**
+상속을 쓰고 위를 구현한다면 `SugarMilkSugarCoffee` 란 클래스를 만들어야 할 것이고, 동적으로 기능이 추가될 때마다 새로운 클래스를 만들어야 할 것이다.
+
+## object 키워드: 클래스 선언과 인스턴스 생성
+
+### **object(싱글턴)의 주의**
+
+객체가 하나이다. → 변경되면 전역에 영향을 준다.
+
+다양한 구성 요소와 상호작용하는 대규모 컴포넌트에는 적합하지 않다.
+
+객체 생성을 제어할 방법이 없고 생성자 파라미터가 없다.
+
+→ 그렇다고 싱글턴 내부에 인스턴스를 바꿔서 사용한다면 앱 전역에 영향을 줘서 사이드 이펙트가 일어날 수 있다.
+
+→ 테스트에도 좋지 않다. (생성을 제어할 수 없고, 테스트 간에 상태가 공유된다.)
+
+→ 객체를 대체하거나 객체의 의존관계를 바꿀 수 없다.
+
+```kotlin
+object MySingleton {
+    val dependency: SomeDependency = SomeDependency()
+
+    fun doSomething() {
+        dependency.performAction()
+    }
+}
+```
+
+`val` 을 `var` 로 바꾸기엔 싱글턴이라서 전역에 문제가 생길 수 있다.
+
+### companion object
+
+> 평소 클래스에서 정적인 값을 담을 때 사용했다.
+>
+
+그럼 들 수 있는 사고가 클래스 내부에 변수로 넣을 수 있는데 왜 굳이 companion object 에 담는거야?
+
+무슨 차이가 있냐면
+
+→ 정적인 값은 변하지 않는다.
+
+→ 클래스 내부 변수에 **`val`** 로 넣으면 동작에선 차이가 없을 지 모르지만, 결국 변하지도 않는 모든 클래스 객체에 동일한 값을 클래스마다 메모리를 할당하면서 만들게 된다.
+
+→ 그러면 companion object 에 해당 값을 할당하면 전역에 하나 생성되어서 메모리 낭비를 줄일 수 있다.
+
+어떨 때 쓸까?
+
+1. 위처럼 정적인 값을 담을 때 사용
+2. 팩토리 메서드를 만들 때 사용
+
+팩토리 메서드 예시를 보자.
+
+- 먼저 사용하지 않을 때
+
+```kotlin
+class User {
+	val nickname: String
+	
+	constructor(email: String) {
+		nickname = email.SubstringBefore('@')
+	}
+	constructor(facebookAccountId: Int) {
+		nickname = getFaceBookNmae(facebookAccountId)
+	}
+}
+
+fun main() {
+    User(email = "jik@naver.com")
+    User(facebookAccountId = 23232)
+}
+```
+
+이렇게 부생성자를 사용해서 클래스를 생성할 수 있다.
+
+팩토리 메서드를 사용하면
+
+```kotlin
+class User private constructor(val nickname: String){
+
+    companion object {
+        fun newSubscribingUser(email: String) = User(email.substringBefore('@'))
+        fun newFacebookUser(accountId: Int) = User(getFacebookName(accountId))
+    }
+}
+
+fun main() {
+    val user1 = User.newSubscribingUser("jik@naver.com")
+    val user2 = User.newFacebookUser(123)
+}
+```
+
+이런식으로 가능하다.
+
+팩토리 메서드의 장점은
+
+1. 목적에 따라 팩토리 메서드 이름을 정할 수 있다. → 클래스를 선언할 때 명확해진다.(`User.~~~`)
+2. 이메일 주소별로 유일한 User 인스턴스를 만드는 경우 팩토리 메서드에서 확인 후 새 인스턴스를 안 만들고 캐시에 있는 기존 인스턴스를 반환할 수 있다.
+3. 선언된 클래스(위 예에선 `User`)의 하위 클래스 객체도 반환할 수 있다.
+
+단점은
+
+클래스를 확장할 때 `companion object` 내부 메서드는 오버라이드할 수 없다.
+
+→ 생성자가 `private` 이기에 확장이 불가능하다.
