4장 클래스, 객체, 인터페이스 - companion object, 익명 객체(object)

--- a/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
+++ b/Kotlin In Action/4. 클래스, 객체, 인터페이스.md
@@ -10,18 +10,18 @@
 
 ```kotlin
 interface Clickable {
-	fun showOff() = println("I'm clickable!")
+    fun showOff() = println("I'm clickable!")
 }
 
 interface Focusable {
-	fun showOff() = println("I'm focusable")
+    fun showOff() = println("I'm focusable")
 }
 
 class Button: Clickable, Focusable {
-	override fun showOff() {
-		// super<Clickable>.showOff()
-		super<Focusable>.showOff()
-	}
+    override fun showOff() {
+        // super<Clickable>.showOff()
+        super<Focusable>.showOff()
+    }
 }
 ```
 
@@ -74,14 +74,14 @@ class Button: Clickable, Focusable {
 
 ### 클래스 내에서 상속 제어 변경자 종류
 
-| 변경자 | 변경자가 붙어 있으면 | 설명 |
-| --- | --- | --- |
-| final | 오버라이드 불가능 | 기본 변경자 |
-| open | 오버라이드 가능 | 반드시 open 을 명시해야 오버라이드 가능 |
-| abstract | 반드시 오버라이드 | 추상 클래스의 멤버에만 붙일 수 있다.
-구현이 있으면 안된다. |
-| override  | 상위 클래스, 인스턴스 멤버를 오버라이드 하고 있음 | 오버라이드 멤버는 기본적으로 열려있다.
-해당 오버라이드 멤버에 대한 또 오버라이드를 제한하려면 final 을 명시하자. |
+| 변경자                                                       | 변경자가 붙어 있으면                              | 설명                                    |
+| ------------------------------------------------------------ | ------------------------------------------------- | --------------------------------------- |
+| final                                                        | 오버라이드 불가능                                 | 기본 변경자                             |
+| open                                                         | 오버라이드 가능                                   | 반드시 open 을 명시해야 오버라이드 가능 |
+| abstract                                                     | 반드시 오버라이드                                 | 추상 클래스의 멤버에만 붙일 수 있다.    |
+| 구현이 있으면 안된다.                                        |                                                   |                                         |
+| override                                                     | 상위 클래스, 인스턴스 멤버를 오버라이드 하고 있음 | 오버라이드 멤버는 기본적으로 열려있다.  |
+| 해당 오버라이드 멤버에 대한 또 오버라이드를 제한하려면 final 을 명시하자. |                                                   |                                         |
 
 ### 인터페이스에서 상속 제어 변경자
 
@@ -114,16 +114,15 @@ class Button: Clickable, Focusable {
     1. 실수로 `internal` 을 모듈 외부에서 사용하는 걸 막아줄 수 있다.
         1. 멤버 이름이 보기 나빠서, “아 이거 `internal` 로 선언되어 있구나” 할 수 있다.
 
-
 ### 내부 클래스, 중첩 클래스
 
 > 코틀린에서 기본적으로 중첩 클래스
->
 
 중첩 클래스 - 바깥쪽 클래스 인스턴스에 대한 **`접근 권한`**이 없다.
 
 <aside>
 💡 왜 코틀린은 기본으로 중첩 클래스가 되도록 그렇게 만들었을까?
+
 
 </aside>
 
@@ -138,7 +137,6 @@ class Button: Clickable, Focusable {
 그러니깐 참조하는 모든 클래스가 `Serializable` 이 되어야 가능한데, 묵시적으로 외부 클래스에 대한 참조때문에 불가능하다는 `NotSerializableException` 예외가 일어나는 거다.
 
 > 안드 개발하다 API 통신 응답 클래스(`response`) 가 `Serializable` 하고 해당 클래스 내부의 클래스들 모두도 `Serializable` 해야 하는 것과 일맥상통하는 이야기
->
 
 그래서 코틀린에선 아무런 변경자를 붙이지 않고 클래스 내부에 클래스를 선언하면 내부 클래스는 외부 클래스에 대한 참조가 없다.
 
@@ -339,7 +337,6 @@ class LengthCounter {
 ### toString() 은 알겠는데 equals() 랑 hashCode() 는 왜 자동으로 오버라이드 해줄까??
 
 > `data class` 는 데이터를 저장하는 class 이다.
->
 
 그럼 데이터를 가지고 작업을 할 때, 불편한 부분들을 제거해준거다.
 
@@ -412,7 +409,6 @@ fun main() {
 ## 클래스 위임: by 키워드(feat. 데코레이터 패턴)
 
 > 보통 delegate 라고들 하는데, 필자는 공부한 적은 있어도 딱히 사용해본 적은 크게 없다. by lazy 말고는?
->
 
 그래서 공부를 해도 쓰질 않고, 적용하지 않다보니 까먹기 마련이였는데
 
@@ -562,7 +558,6 @@ class SugarCoffee(private val decoratedCoffee: Coffee) : Coffee by decoratedCoff
 ### 다시 생각한 데코레이터 패턴의 장점
 
 > 그런데 데코레이터 패턴을 써도 결국 기본 클래스를 변경하면 데코레이터 클래스에 영향을 주는 거 아닌가?
->
 
 상속을 안 쓸 뿐이지 결국 기본 클래스를 참조하고 내부 메서드를 사용하는 건 마찬가지니깐
 
@@ -644,7 +639,6 @@ object MySingleton {
 ### companion object
 
 > 평소 클래스에서 정적인 값을 담을 때 사용했다.
->
 
 그럼 들 수 있는 사고가 클래스 내부에 변수로 넣을 수 있는데 왜 굳이 companion object 에 담는거야?
 
@@ -715,3 +709,106 @@ fun main() {
 클래스를 확장할 때 `companion object` 내부 메서드는 오버라이드할 수 없다.
 
 → 생성자가 `private` 이기에 확장이 불가능하다.
+
+### companion object 는 일반 객체처럼 사용이 가능
+
+일반 객체(obeject)처럼 사용이 가능하다.
+
+> 애초에 클래스 안에 정의된 일반 객체
+
+라고 적혀있다.
+
+그래서 이름을 붙이고, 인터페이스를 상속하고, 확장 함수 프로퍼티도 내부에 정의가 가능하다.
+
+**companion object 로 인터페이스 구현했을 때 가능한 방법**
+
+아래처럼 companion object 를 둘러싼 클래스 이름을, 구현한 인터페이스에 넣을 수 있다.
+
+```kotlin
+interface JsonFactory<T> {
+  fun fromJson(jsonText: String): T
+}
+
+class Person(val name: String) {
+	companion object: JsonFactory<Person> {
+    override fun fromJson(jsonText: String): Preson = ...
+	}
+}
+
+fun loadFromJson<T>(factory: JsonFactory<T>): T {
+  ...
+}
+
+loadFromJson(Person)
+```
+
+**companion object + 확장 함수**
+
+어떤 걸 할 수 있냐?
+
+프로젝트를 하다보면 모듈화를 하다보면 의존성에 민감해지고
+
+A 라는 모듈에 B 라는 클래스를 모르게 하고 싶고,, 등등의 일이 많다.
+
+여기서 예시는 비지니스 로직 모듈에 `Person` 이란 클래스가 선언되어 있고,  역직렬화 함수가 존재하는데 이를 클라이언트/서버 모듈에 넣는 방식이다.
+
+```kotlin
+// 비지니스 로직 모듈
+class Person(val firstName: String, val lastName: String) {
+	companion object {
+    
+  }
+}
+
+// 클라이언트/서버 통신 모듈
+fun Person.Companion.fromJson(json: String): Person {
+  ...
+}
+
+val p = Person.fromJson(json)
+```
+
+이렇게 모듈내에 역직렬화 함수를 만들지 않고 다른 모듈에 확장함수로 가능하다.(동반 객체의 함수도)
+
+**object: 익명 객체**
+
+object 를 싱글턴에서만 사용하지 않고,  익명객체에도 사용.
+
+```kotlin
+window.eaddMouseListener(
+	object: MouseAdapter() {
+		override fun mouseClicked(e: MouseEvent) {
+		}
+		
+		override fun mouseEntered(e: MouseEvent) {
+		}
+	}
+)
+```
+
+위와 같이 리스너 동작을 정의할 때 주로 사용한 기억이 있다.(xml 기반 view 시스템에서)
+
+위의 예시처럼 함수에 인자로 넘길 때 많이 사용하기에 굳이 이름이 필요가 없다.
+
+그런데 얘는 싱글턴이 아니다.
+
+객체 식이 쓰일 때마다, 새로운 인스턴스가 생성된다.!!
+
+또한 익명객체가 사용된 함수의 변수도 익명객체 내부에서 접근이 가능하다.
+
+```kotlin
+fun countClicks(window: Window) {
+	var clickCount = 0
+	
+	window.eaddMouseListener(
+		object: MouseAdapter() {
+			override fun mouseClicked(e: MouseEvent) {
+				clickCount ++ // 접근이 가능
+			}
+			
+			override fun mouseEntered(e: MouseEvent) {
+			}
+		}
+	)
+}
+```
