--- a/Kotlin In Action/5. 람다로 프로그래밍.md
+++ b/Kotlin In Action/5. 람다로 프로그래밍.md
@@ -58,7 +58,7 @@ val sum = { x: Int, y: Int -> x + y }
 ```kotlin
 { println(42) }()    // 1
 
-run { println(42 }    // 2
+run { println(42}    // 2
 ```
 
 1 처럼 람다식을 선언과 동시에 직접 호출(`()`) 이 가능하다.
@@ -99,3 +99,127 @@ people.maxBy(getAge)
 프로그램의 기본 구성 요소와 비슷한 성능을 가진다.
 
 8장에 추가로 이유가 나온다고 하니 그때 자세히 알아보자.
+
+### 멤버 참조(`::`)
+
+개발하면서 종종 많이 사용해왔다.
+
+`viewModel::getInfo`
+
+요렇게,,
+
+어떨 때 사용하냐면 함수의 인자로 함수를 넘길때(고차함수)에서 람다 대신 사용해왔다.
+
+`{ viewModel.getInfo() }` →  `viewModel::getInfo`
+
+이렇게 대신할 수 있다.
+
+**그럼 이게 왜 좋은가?**
+
+일단 넘기려는 코드가 함수인데, 그걸 또 람다로 감싸면?
+
+중복되는 느낌이 있다.
+
+람다도 함수이고 람다 내부도 함수이다. 기분이 좋지않다.
+
+하지만 멤버 참조는 매우 깔끔하다.
+
+그리고 람다 내부의 함수에 인자가 여러개라면? 그리고 딱히 변환없이 그냥 위임하는 경우라면?
+
+아래 코드처럼.. 인자가 늘어나면 계속 추가해야한다. 수동적으로
+
+```kotlin
+navigateToLedgerDetail = { navOptions, ledgerId, isStaff ->
+    homeNavController.navigateLedgerDetail(navOptions, ledgerId, isStaff)
+}
+```
+
+그런데 멤버 참조를 쓰면
+
+```kotlin
+navigateToLedgerDetail = homeNavController::navigateLedgerDetail
+```
+
+굳.  알아서 인자가 잘 들어간다.
+
+또 하나 멤버 참조로 변수를 선언할 수 있다.(이건 몰랐다..)
+
+```kotlin
+val getAge = Person::age
+```
+
+이게 된다. 그럼 이건 함수이다 타입은? `() → Int`
+
+이렇게 변수에 할당한다는 건 결국 멤버 참조는 값을 생성한다는 의미이다.
+
+난 기존엔 멤버 참조 메서드에 직접 접근해서 사용하는 줄 알았다.
+
+값을 만드는 줄은 몰랐다.
+
+그럼? 람다랑 다를 게 뭐야?
+
+가독성말고 좋은 게 없잖아.(그걸로도 이미 쓸 이유지만)
+
+`compose` 에서 `recomposition` 에서 차이를 경험한 적이 있다.
+
+람다를 쓸 때보다 멤버 참조를 쓸 때 `recomposition` 이 적게 일어났다.
+
+그래서 멤버 참조는 값을 새로 생성한다고 생각하지 않았다.(값이란 개념을 생각하지 않았다. 근데 생각해보면 함수의 인자로 들어갈 수 있는데 값이라고 유추했어야 하지 않나..?)
+
+그럼 무슨 차이가 있길래? recomposition 에서 차이를 보였을까?
+
+아래 코드를 실행해보자.
+
+```kotlin
+fun printJik() {
+    println("JIK")
+}
+
+fun main() {
+    val member1 = ::printJik
+    val lambda1 = { printJik() }
+    val member2 = ::printJik
+    val lambda2 = { printJik() }
+
+    println("member1.hashcode = ${member1.hashCode()}")
+    println("lambda1.hashcode = ${lambda1.hashCode()}")
+    println("member2.hashcode = ${member2.hashCode()}")
+    println("lambda2.hashcode = ${lambda2.hashCode()}")
+}
+```
+
+```kotlin
+a.hashcode = 824655241
+b.hashcode = 500977346
+c.hashcode = 824655241
+d.hashcode = 20132171
+```
+
+보면은 멤버 참조로 할당된 변수의 hashcode 값은 항상 동일했다.
+
+하지만 람다는 보다시피 hashcode 값이 다르다.
+
+이는 결국 멤버 참조는 계속 새로운 값을 생성 하는 게 아닌 단 **하나의** 값만 생성하는 걸 알 수 있다.
+
+그래서 `recomposition` 에서 괜찮았구나…
+
+## 컬렉션 함수형 API
+
+```kotlin
+people.filter { it.age == people.maxBy(Person::age)!!.age }
+```
+
+여기서 잘못된 게 뭘까?
+
+만약에 `people` 리스트에 원소가 10만명이 있다면?
+
+해당 시간 복잡도는 **10만 * 10만** 이 되어버린다.
+
+그래서 람다 내부에 또 람다를 넘기면 겉으론 단순해보여도, 내부적으론 매우 복잡한 계산식이 될 때가 있다.
+
+그러니 아래처럼 사용하자.
+
+```kotlin
+val maxAge = people.maxBy(Person::age)!!.age
+people.filter { it.age == maxAge }
+```
