5장. 람다로 프로그래밍: groupBy, flatMap, flatten, 지연 계산(sequence)

--- a/Kotlin In Action/5. 람다로 프로그래밍/5. 람다로 프로그래밍.md
+++ b/Kotlin In Action/5. 람다로 프로그래밍/5. 람다로 프로그래밍.md
@@ -223,3 +223,189 @@ people.filter { it.age == people.maxBy(Person::age)!!.age }
 val maxAge = people.maxBy(Person::age)!!.age
 people.filter { it.age == maxAge }
 ```
+
+### groupBy
+
+> 리스트를 여러 그룹으로 이뤄진 맵으로 변경
+>
+
+```kotlin
+val people = listOf(Person("Alice", 31), Person("Bob", 29), Person("Carol", 31))
+println(people.groupBy { it.age })
+
+>> {31=[Person(name=Alice, age=31), Person(name=Carol, age=31)], 29=[Person(name=Bob, age=29)]}
+```
+
+이렇게 리스트의 특정 속성으로 그룹화 하고 싶다면 `groupBy` 를 사용하면 된다.
+
+그럼 `key` 가 해당 속성의 값, `value` 는 해당 속성에 따라 그룹화된 원소들이 리스트 배열 안에 들어간다.
+
+### flatMap, flatten
+
+> 중첩된 컬렉션 안의 원소 처리
+>
+
+**`flatMap`**
+
+```kotlin
+val strings = listOf("abc", "def", "ghi")
+println(strings.flatMap { it.toList() })
+
+>> [a, b, c, d, e, f, g, h, i]
+
+val strings = listOf(listOf('a', 'b', 'c'), listOf('c', 'd', 'f'))
+println(strings.flatMap { it + 1 })
+
+>> [a, b, c, 1, c, d, f, 1]
+```
+
+flatMap 의 인자로 받은 람다를 먼저 모든 객체에 실행한다. → `map`
+
+해당 결과를 한 리스트로 모은다. → `flatten`
+
+**`flatten`**
+
+그런데 변형 없이 단순히 펼치고만 싶다면?
+
+```kotlin
+val strings = listOf(listOf('a', 'b', 'c'), listOf('c', 'd', 'f'))
+println(strings.flatten())
+
+>> [a, b, c, c, d, f]
+```
+
+### 지연 계산(lazy) 컬렉션 연산(`sequence`)
+
+```kotlin
+people.map(Person::name).filter { it.startsWith("A") }
+```
+
+위와 같이 코드가 있다면 리스트가 **2개**가 생성된다.
+
+→ 연쇄 실행되면서 `map` 에서 리스트 반환. `filter` 에서 리스트 반환하기에
+
+그런데 사실 우리가 필요한 건 마지막 결과인 리스트 **1개**이다.
+
+이게 만약 people 의 원소 개수가 적으면 괜찮겠지만 많다면 성능상 좋지 않다.(메모리)
+
+그러면 하나만 만들 수 없나?
+
+```kotlin
+people.asSequence()
+  .map(Person::name)
+  .filter { it.startsWith("A") }
+  .toList()
+```
+
+이렇게 하면 된다.
+
+이러면 마지막 `toList()` 에서 단 하나의 리스트만 생성된다.
+
+sequence 인터페이스는 단지 한 번에 하나씩 열거될 수 있는 원소의 시퀀스를 표현할 뿐이다.
+
+내부에 `iterator` 메서드 단 하나가 있으며 이를 통해, 시퀀스에서 원소 값을 얻는다.
+
+어떻게 저게 가능할까?
+
+시퀀스의 연산은 필요할 때 계산된다.
+
+그래서 연쇄 실행할 때 중간 중간 결과를 저장하지 않는다.
+
+**시퀀스의 연산**
+
+시퀀스는 중간 연산과 최종 연산으로 나뉜다.
+
+중간 연산은 다른 시퀀스를 반환. → 해당 시퀀스는 이전의 시퀀스의 원소를 변환하는 방법을 안다.
+
+최종 연산은 결과를 반환(결과는 앞선 계산을 수행해 얻을 수 있는 컬렉션, 원소, 숫자 또는 객체)
+
+![Untitled](resource/Untitled.png)
+
+연산의 수행 순서를 보자.
+
+```kotlin
+listOf(1, 2, 3, 4).asSequence()
+  .map { print("map($it) "); it * it }
+  .filter { print("filter($it) "); it % 2 == 0 }
+  .toList()
+
+>> map(1) filter(1) map(2) filter(4) map(3) filter(9) map(4) filter(16) 
+```
+
+일반 컬렉션이라면 `map` 함수 모두 실행한 뒤, `filter` 함수를 실행한다.
+
+하지만 시퀀스의 경우 모든 연산은 각 원소에 대해 순차적으로 저용된다.
+
+첫 번째 원소 모든 연산 수행 → 두 번째 원소 모든 연산 수행 → …
+
+그렇기 때문에, 원소에 연산을 차례대로 수행하다가 원하는 결과가 얻어지면 그 이후의 원소에 대한 연산은 이뤄지지 않을 수 있다.
+
+```kotlin
+listOf(1, 2, 3, 4)
+	.asSequence()
+  .map { it * it }
+  .find { it > 3 }
+```
+
+여기서 `find` 는 최종 연산이다.(숫자를 반환하니)
+
+이걸 일반 컬렉션에서의 계산 과정(즉시 계산)과 비교해보자.
+
+![Untitled](resource/Untitled1.png)
+
+이렇게 지연 계싼을 하면 원소 차례로 연산하기에, map 함수를 모두 수행하지 않는다.
+
+→ 성능에 영향을 끼친다
+
+이걸 다른 예시로 보면
+
+```kotlin
+val people = listOf(Person("Alice", 29), Person("Bob", 31), Person("Carol", 34), Person("David", 32))
+    
+// 1
+people.asSequence()
+    .map(Person::name)
+    .filter { it.length < 4 }
+    .toList()
+
+// 2
+people.asSequence()
+    .filter { it.name.length < 4 }
+    .map(Person::name)
+    .toList()
+```
+
+1번과 2번의 결과는 차이가 없다. 하지만
+
+연산 횟수에서 차이가 난다.
+
+![Untitled](resource/Untitled2.png)
+
+**시퀀스를 만들어보자.**
+
+지금까진 `asSequence()` 로 기존의 컬렉션을 비롯해서 만들었다.
+
+바로 생성하고 싶으면
+
+```kotlin
+val naturalNumbers = generateSequence(0) { it + 1 }
+val numbersTo100 = naturalNumbers.take(101)
+val sum = numbersTo100.sum()
+println(sum)
+```
+
+`naturalNumbers`, `numbersTo100` 모두 시퀀스며, 연산을 지연 계산한다.
+
+그래서 최종 연산하기까진 시퀀스의 숫자는 계산되지 않는다.
+
+(sum() 이 최종 연산이다.)
+
+위의 예시말고 또 다른 예시를 하나 보자.
+
+```kotlin
+fun File.isInsideHiddenDirectory() =
+    generateSequence(this) { it.parentFile }.any { it.isHidden }
+
+val file = File("path/to/file")
+println(file.isInsideHiddenDirectory())
+```
