5장. 람다로 프로그래밍: 자바 함수형 인터페이스 활용

--- a/Kotlin In Action/5. 람다로 프로그래밍/5. 람다로 프로그래밍.md
+++ b/Kotlin In Action/5. 람다로 프로그래밍/5. 람다로 프로그래밍.md
@@ -5,7 +5,7 @@
 
 </aside>
 
-### 지피티에게 물어보자 람다식, 람다식이란?
+# 지피티에게 물어보자 람다식, 람다식이란?
 
 **람다식**은 익명 함수의 한 형태로, 이름이 없는 함수를 뜻합니다.
 
@@ -25,7 +25,7 @@
 
 함수를 값처럼 취급한다는 의미이다.
 
-### 람다 대신 멤버 참조
+# 람다 대신 멤버 참조
 
 ```kotlin
 val people = listOf(Person("Alice", 23), Person("Heejik", 26))
@@ -37,7 +37,7 @@ println(people.maxBy(Person::age)) // 멤버 참조
 
 함수나 프로퍼티를 반환하는 역할을 수행하는 람다는 멤버 참조로 대치가 가능핟.
 
-### 람다 식의 문법
+# 람다 식의 문법
 
 ```kotlin
  { x: Int, y: Int -> x + y }
@@ -92,7 +92,7 @@ people.maxBy(getAge)
 
 람다식의 본문이 여러 줄로 이뤄질 때 람다식의 결과는 본문의 맨 마지막에 있는 식
 
-### 람다의 비용
+# 람다의 비용
 
 실행(런타임) 시점에 코틀린 람다 호출에는 아무 부가 비용이 들지 않는다.
 
@@ -100,7 +100,7 @@ people.maxBy(getAge)
 
 8장에 추가로 이유가 나온다고 하니 그때 자세히 알아보자.
 
-### 멤버 참조(`::`)
+# 멤버 참조(`::`)
 
 개발하면서 종종 많이 사용해왔다.
 
@@ -158,7 +158,7 @@ val getAge = Person::age
 
 그럼? 람다랑 다를 게 뭐야?
 
-가독성말고 좋은 게 없잖아.(그걸로도 이미 쓸 이유지만)
+### 가독성말고 좋은 게 없잖아?(그걸로도 이미 쓸 이유지만)
 
 `compose` 에서 `recomposition` 에서 차이를 경험한 적이 있다.
 
@@ -203,7 +203,7 @@ d.hashcode = 20132171
 
 그래서 `recomposition` 에서 괜찮았구나…
 
-## 컬렉션 함수형 API
+# 컬렉션 함수형 API
 
 ```kotlin
 people.filter { it.age == people.maxBy(Person::age)!!.age }
@@ -224,10 +224,9 @@ val maxAge = people.maxBy(Person::age)!!.age
 people.filter { it.age == maxAge }
 ```
 
-### groupBy
+## groupBy
 
 > 리스트를 여러 그룹으로 이뤄진 맵으로 변경
->
 
 ```kotlin
 val people = listOf(Person("Alice", 31), Person("Bob", 29), Person("Carol", 31))
@@ -240,10 +239,9 @@ println(people.groupBy { it.age })
 
 그럼 `key` 가 해당 속성의 값, `value` 는 해당 속성에 따라 그룹화된 원소들이 리스트 배열 안에 들어간다.
 
-### flatMap, flatten
+## flatMap, flatten
 
 > 중첩된 컬렉션 안의 원소 처리
->
 
 **`flatMap`**
 
@@ -274,7 +272,7 @@ println(strings.flatten())
 >> [a, b, c, c, d, f]
 ```
 
-### 지연 계산(lazy) 컬렉션 연산(`sequence`)
+## 지연 계산(lazy) 컬렉션 연산(`sequence`)
 
 ```kotlin
 people.map(Person::name).filter { it.startsWith("A") }
@@ -311,7 +309,7 @@ sequence 인터페이스는 단지 한 번에 하나씩 열거될 수 있는 원
 
 그래서 연쇄 실행할 때 중간 중간 결과를 저장하지 않는다.
 
-**시퀀스의 연산**
+### **시퀀스의 연산**
 
 시퀀스는 중간 연산과 최종 연산으로 나뉜다.
 
@@ -381,7 +379,7 @@ people.asSequence()
 
 ![Untitled](resource/Untitled2.png)
 
-**시퀀스를 만들어보자.**
+### **시퀀스를 만들어보자.**
 
 지금까진 `asSequence()` 로 기존의 컬렉션을 비롯해서 만들었다.
 
@@ -403,9 +401,200 @@ println(sum)
 위의 예시말고 또 다른 예시를 하나 보자.
 
 ```kotlin
-fun File.isInsideHiddenDirectory() =
-    generateSequence(this) { it.parentFile }.any { it.isHidden }
+fun File.isInsideHiddenDirectory() = 
+        generateSequence(this) { it.parentFile }.any { it.isHidden }
 
 val file = File("path/to/file")
 println(file.isInsideHiddenDirectory())
+```
+
+## 자바 함수형 인터페이스 활용
+
+> 자바로 작성된 API 에서 람다를 사용해보자
+
+아래는 안드로이드 개발을 시작하면 초기에 접하는 구문이다.
+
+```kotlin
+button.setOnClickListener { view -> /* ... */ }
+```
+
+여기서 `setOnClickListener` 를 들여다 보자
+
+```java
+public void setOnClickListener(@Nullable OnClickListener l) {
+	// ...
+}
+```
+
+필요한 인자의 타입은 `OnClickListener` 이다
+
+그럼 `OnClickListener` 를 들여다 보자
+
+```java
+public interface OnClickListener {
+  void onClick(View v);
+}
+```
+
+놀랍게도 인터페이스이고, `onClick` 이란 메서드가 선언되어 있다.
+
+그럼 자바8에선 해당 코드를 어떻게 짤까? (람다를 쓰지 않고)
+
+```java
+button.setOnClickListener(new OnClickListener () {
+    @Override
+    public void onClick(View v) {
+        println("무명(익명) 클래스로 구현")
+    }
+}
+```
+
+이렇게 무명 클래스의 인스턴스를 만들어야 한다.
+
+하지만 코틀린에선 위와 같이 람다로 넘길 수 있다.
+
+```java
+button.setOnClickListener {
+    println("코틀린에서 람다로 구현")
+}
+```
+
+이게 가능한 이유는 OnClickListener 가 **함수형 인터페이스 또는 SAM 인터페이스 이기 때문이다.**
+
+→ 단 하나의 추상 메서드를 가지는 인터페이스를 의미
+
+코틀린에선 함수형 인터페이스를 인자로 취하는 자바 메서드를 호출할 땐
+람다로 인터페이스 내부 메서드를 정의할 수 있다.
+
+또 다른 예시로
+
+```java
+void postponeComputation(int delay, Runnable computation)
+```
+
+위 자바의 함수를 아래의 kotlin 코드로 호출이 가능하다
+
+```kotlin
+postponeComputation(1000) { println(42 } 
+```
+
+이렇게도 가능하다
+
+```kotlin
+postponeComputation(1000, object: Runnable {
+    override fun run() {
+        println(42)
+    }
+})
+```
+
+그럼 지금까지 본 게 어떤 걸 의미하냐면
+
+<aside>
+💡 컴파일러가 람다를 자동으로 무명 클래스의 인스턴스로 만들어준다.
+
+
+</aside>
+
+여기서 람다 본문은 함수형 인터페이스의 유일한 메서드 본문으로 사용된다.
+
+하지만 차이는 존재한다.
+
+익명 클래스의 인스턴스를 직접 만들어서 넘기면 해당 함수를 호출할 때마다 새로 생성한다.
+
+→ but. 람다는 컴파일러가 자동으로 생성한 인스턴스를 새로 생성하지 않고, 반복 사용한다.
+
+여기서도 예외는 있다.
+
+```kotlin
+fun handleComputation(id: String) {
+    postponeComputation(1000) { println(id) }
+}
+```
+
+이렇게 하면  람다에서 `id`  변수를 포획한다.
+
+그럼 해당 `handleComputation` 함수를 호출할 때마다 새로운 Runnable 인스턴스가 생성된다.
+
+→ 왜냐면 함수가 호출할 때마다 `id` 값이 바뀔 수 있으니
+
+### SAM 생성자: 람다를 함수형 인터페이스로 명시적으로 변경
+
+> 컴파일러가 람다를 자동으로 함수형 인터페이스로 변환해주지만, 그렇지 못하는 경우엔 수동으로 해야한다.
+
+```kotlin
+fun createAllDoneRunnable(): Runnable {
+    return { println("All done!") } // Type mismatch
+}
+```
+
+print 를 가지는 람다를 Runnable 인스턴스로 자동으로 컴파일이 변환해주지 않는다.
+
+그럼 어떻게 할 수 있냐면
+
+```kotlin
+fun createAllDoneRunnable(): Runnable {
+    return Runnable { println("All done!") }
+}
+```
+
+이렇게 람다 앞에 사용하는 함수형 인터페이스의 이름을 붙이면 된다.
+
+이걸 SAM 생성자라고 하며, 람다는 함수형 인터페이스의 유일한 추상 메서드의 본문에 사용된다.
+
+유용한 용례로는
+
+```kotlin
+val listener = OnClickListener { view ->
+    val text = when (view.id) {
+        R.id.button1 -> "Button 1 clicked"
+        R.id.button2 -> "Button 2 clicked"
+        else -> "Unknown button clicked"
+    }
+    taost(text)
+}
+
+findViewById<Button>(R.id.button1).setOnClickListener(listener)
+findViewById<Button>(R.id.button2).setOnClickListener(listener)
+```
+
+이렇게 사용될 수 있다
+
+### 수신 객체 지정 람다
+
+> 책에선 `with` 과 `apply`  관련된 내용이 나오지만, 아는 내용이기에 빼고 색다른 내용만
+
+```kotlin
+fun alphabet() = with(StringBuilder()) {
+    for (letter in 'A'..'Z') {
+        append(letter)
+    }
+    append("\nNow I know the alphabet!")
+    toString()
+}
+```
+
+`with` 을 사용해서 `StringBuilder` 를 수신 객체로 받아, 코드를 깔끔히 한 예시이다.
+
+그런데 이걸
+
+```kotlin
+fun alphabet() = buildString {
+    for (letter in 'A'..'Z') {
+        append(letter)
+    }
+    append("\nNow I know the alphabet!")
+}
+```
+
+이렇게가 가능하다
+
+내부적으로 `StringBuilder` 를 만들고 `toString()` 까지 알아서 해준다
+
+```kotlin
+inline fun buildString(builderAction: StringBuilder.() -> Unit): String {
+    contract { callsInPlace(builderAction, InvocationKind.EXACTLY_ONCE) }
+    // !!!
+    return StringBuilder().apply(builderAction).toString()
+}
 ```
