--- a/Kotlin In Action/6. 코틀린 타입 시스템/6. 코틀린 타입 시스템.md
+++ b/Kotlin In Action/6. 코틀린 타입 시스템/6. 코틀린 타입 시스템.md
@@ -78,7 +78,6 @@ fun b() {
 person.company!!.address!!.country
 ```
 
-
 ## 나중에 초기화할 프로퍼티
 
 > 때론 `null` 이 될 필요가 없는 프로퍼티이지만, 초기화를 피하기 위해 `null` 로 선언하는 경우가 있다.
@@ -131,7 +130,8 @@ class MyTest {
 
 이렇게 `lateinit` 를 쓰면 된다.
 
-→ `lateinit` 을 알고는 있었지만, 코드짤 땐 잘 쓰지를 않았다. 분명 위와 같은 경우도 있었던 것 같은데 염두에 두고 있지 않아서 인 듯하다.
+→ `lateinit` 을 알고는 있었지만, 코드짤 땐 잘 쓰지를 않았다. 분명 위와 같은 경우도 있었던 것 같은데
+염두에 두고 있지 않아서 인 듯하다.
 
 ## 타입 파라미터의 널 가능성
 
@@ -269,8 +269,172 @@ fun yellAt(person: Person) {
 
 → 제네릭을 다룰 때 상황은 더 나빠지는데, 자바의 `ArrayList<String>` 을 코틀린에선 `ArrayList<String?>?` 으로 다룰 것이다. 그러면 해당 배열과 내부 원소에 접근할 때마다 `null check` 가 강제된다.
 
-널 안전성으로 얻는 이익보다, 검사에 드는 비용이 훨씬 커진다. → 모든 타입의 값에 항상 널 검사를 작성하는 건 너무 성가신 일이다.
+널 안전성으로 얻는 이익보다, 검사에 드는 비용이 훨씬 커진다.
+→ 모든 타입의 값에 항상 널 검사를 작성하는 건 너무 성가신 일이다.
 
-<aside> 💡 그래서 코틀린 설계자들은 자바의 타입을 가져온 경우, 프로그래머에게 그 타입을 처리할 책임을 부여하는 실용적인 접근 방법을 선택.
+<aside>
+💡 그래서 코틀린 설계자들은 자바의 타입을 가져온 경우, 프로그래머에게 그 타입을 처리할 책임을 부여하는 실용적인 접근 방법을 선택.
+
 
 </aside>
+
+코틀린에서는 플랫폼 타입을 선언할 수는 없다.
+
+→ 자바 코드에서 가져온 타입만 플랫폼 타입
+
+하지만 오류 메시지에서는 볼 수 있다.
+
+![Untitled](resource/Untitled2.png)
+
+여기서 `String!` 는 뭘까?
+
+→ null 가능성에 대해 아무런 정보가 없다는 뜻이다.
+
+# 코틀린의 원시 타입
+
+## 원시 타입
+
+자바는 원시 타입과 참조 타입을 구분한다.
+
+### 잠시 원시 타입과 참조 타입을 간단하게 알아보자.
+
+원시 타입에는 값 자체,
+
+참조 타입에는 메모리상의 객체 위치
+
+서로의 장 단점이 존재
+
+원시 타입
+
+- 메모리에 직접 저장하기에 접근 속도가 빠르다.
+- 고정된 메모리 크기를 가진다. → 효율적
+
+참조 타입
+
+- 객체가 된다. → 메서드와 속성을 가질 수 있다.
+- 컬렉션 내부 타입에 들어갈 수 있다.
+    - → 제네릭에 들어갈 수 있다.
+        - 제네릭의 내부 데이터 타입은 타입소거를 통해 런타임 시점에 object 로 변환
+        - 그렇기에 참조 타입만 들어갈 수 있음 (원시타입은 object 로 변환되지 않기에)
+- null 값을 가질 수 있다.
+
+### 코틀린은?
+
+코틀린에선 그런 생각을 해본적이 없다.
+
+정수 타입이면 Int 가 끝. Integer 이란 건 없다.
+
+→ 그럼 코틀린은 항상 참조 타입으로 취하는 걸까?
+
+그러면 너무 비효율적이니, 그렇지 않고 컴파일러가 판단하에 가장 효율적인 방식으로 표현된다.
+
+Int 타입은 자바의 Int 타입으로 컴파일 되지만, 이게 불가능한 경우(제네릭)엔 Integer 타입으로 들어간다.
+
+### 널이 될 수 있는 원시 타입: Int?, Boolean? …
+
+위에서 봤듯 참조 타입만 Null 이 가능하다
+
+그럼 코틀린에서 `Int?`  타입을 선언한다면? → 이는 래퍼 타입(참조 타입)으로 컴파일된다.
+
+또한 제네릭에서 타입으로 `Int` 를 넘기면 → → 이는 래퍼 타입(참조 타입)으로 컴파일된다.
+
+### Any, Any?: 최상위 타입
+
+자바엔 Object, 코틀린엔 Any 가 최상위 타입
+
+자바의 Object 는 코틀린에서 Any 로 취급(사실 Any! 가 더 정확하다)
+
+코틀린의 Any 는 자바의 Object 로 컴파일
+
+앞서 본 `toString`, `equals`, `hashCode` 는 사실 Any 에 있는 메서드이고 이를 상속한 것
+
+### Unit 타입: 코틀린의 void
+
+> 대부분은 동일하다.
+
+그렇다면 코틀린의 Unit 과 자바의 void 차이는 무엇일까?
+
+Unit 을 타입 인자로 쓸 수 있고, Unit 타입에 속한 값은 하나이며, 이 이름은 Unit
+
+Unit 타입을 반환하는  함수는 묵시적으로 Unit 값을 반환한다.
+
+→ 이게 뭐냐면
+
+```kotlin
+fun printJik(): Unit {
+    println("JIKKKK")
+}
+```
+
+위 코드는 사실 `return Unit` 생략된 코드이다.
+
+이 특성이 가지는 장점은 언제일까?
+
+```kotlin
+interface Processor<T> {
+    fun process(): T
+}
+```
+
+위와 같은 인터페이스가 있다고 치자.
+
+그럼 다양한 곳에서 이를 구현하고 오버라이드할 것이다.
+
+여기서 반환값이 없는 함수를 구현하고 싶다면?
+
+```kotlin
+class NoResultProcessor: Processor<Unit> {
+    override fun process() {
+        // 업무 처리
+    }
+}
+```
+
+이렇게 할 수 있다.
+
+왜냐면 `return Unit` 이 생략된 함수이기에 사실은 T 타입으로 return 을 하고 있는 것이다.
+
+자바에서 이를 한다면?
+
+- 인터페이스를 분리하거나
+- `java.lang.Void` 타입(void 가 아니다.)을 타입 파라미터로 사용하고, `return null` 을 명시해야 한다.
+
+코틀린에서는 왜 이름이 `Unit` 일까? `Void` 가 아니고
+
+Unit 과 Void 의 가장 큰 차이는 인스턴스의 유무이다.
+
+Unit 은 Unit 이란 인스턴스를 갖는다.
+
+함수형 프로그래밍에서 전통적으로 Unit 이 ‘단 하나의 인스턴스만 갖는 타입’ 을 의미해왔다.
+
+### Nothing 타입: 이 함수는 결코 정상적으로 끝나지 않는다.
+
+> 때론 함수에 “반환” 자체가 필요하지 않는 경우가 있다.
+
+```kotlin
+**fun fail() {
+    throw IllegalArgumentException()
+}**
+```
+
+이 코드가 반환값이 필요할까? 반환 자체가 될까?
+
+반환이 필요없고 무조건 예외를 던진다.
+
+그런데 예의 반환 타입이 존재한다. → `Unit`
+
+![Untitled](resource/Untitled3.png)
+
+이러면? address 는 Any 타입으로 타입 추론이 된다.
+
+여기서 `String` 과 fail 의 반환값인 `Unit` 의 공통 상위 타입은 Any 라서 Any 타입이 추론된다.
+
+그런데 우리는 사실 address 과 `String` 타입만 올 수 있는 걸 안다. 왜냐면 String 이 아니면 예외를 던지니
+
+그럼 여기서 쓸 수 있는 게 `Nothing` 이다
+
+![Untitled](resource/Untitled4.png)
+
+fail 의 반환 타입을 `Nothing`   으로 하면 해당 함수는 반환을 하지 않는 걸 의미한다.
+
+그래서 `address` 변수 타입이 `fail` 함수의 반환에 영향을 받지 않는다.
