6장. 코틀린 타입 시스템: 컬렉션과 배열

--- a/Kotlin In Action/6. 코틀린 타입 시스템/6. 코틀린 타입 시스템.md
+++ b/Kotlin In Action/6. 코틀린 타입 시스템/6. 코틀린 타입 시스템.md
@@ -59,12 +59,12 @@ fun c() {
 ```kotlin
 // 1
 fun b() {
-	print(name!!.length)
+    print(name!!.length)
 }
 
 // 2
 fun b() {
-	print(name?.length ?: return)
+    print(name?.length ?: return)
 }
 ```
 
@@ -89,6 +89,7 @@ class MyService {
 
 class MyTest {
     private var myService: MyService? = null
+
     @Before
     fun setUp() {
         myService = MyService()
@@ -115,7 +116,8 @@ class MyService {
 }
 
 class MyTest {
-		private lateinit var myService: MyService
+    private lateinit var myService: MyService
+
     @Before
     fun setUp() {
         myService = MyService()
@@ -139,7 +141,7 @@ class MyTest {
 
 ```kotlin
 fun <T> printHashCode(t: T) {
-	println(t?.hashCode())
+    println(t?.hashCode())
 }
 
 >>> printHashCode(null)
@@ -151,12 +153,12 @@ null
 하지만 `T` 를 `non null` 로 보장받고 싶다면?
 
 ```kotlin
-fun <T: Any> printHashCode(t: T) {
-	println(t.hashCode())
+fun <T : Any> printHashCode(t: T) {
+    println(t.hashCode())
 }
 
 >>> printHashCode(null)
-compile error: Null can not be a value of a non-null type TypeVariable(T)
+compile error : Null can not be a value of a non -null type TypeVariable(T)
 ```
 
 이 처럼 타입 상한을 `non-null` 로 지정하면 된다.
@@ -267,7 +269,8 @@ fun yellAt(person: Person) {
 
 만약 모두 nullable 로 다룬다면
 
-→ 제네릭을 다룰 때 상황은 더 나빠지는데, 자바의 `ArrayList<String>` 을 코틀린에선 `ArrayList<String?>?` 으로 다룰 것이다. 그러면 해당 배열과 내부 원소에 접근할 때마다 `null check` 가 강제된다.
+→ 제네릭을 다룰 때 상황은 더 나빠지는데, 자바의 `ArrayList<String>` 을 코틀린에선 `ArrayList<String?>?` 으로 다룰 것이다. 그러면 해당 배열과 내부 원소에 접근할
+때마다 `null check` 가 강제된다.
 
 널 안전성으로 얻는 이익보다, 검사에 드는 비용이 훨씬 커진다.
 → 모든 타입의 값에 항상 널 검사를 작성하는 건 너무 성가신 일이다.
@@ -438,3 +441,59 @@ Unit 은 Unit 이란 인스턴스를 갖는다.
 fail 의 반환 타입을 `Nothing`   으로 하면 해당 함수는 반환을 하지 않는 걸 의미한다.
 
 그래서 `address` 변수 타입이 `fail` 함수의 반환에 영향을 받지 않는다.
+
+## 컬렉션과 배열
+
+### 읽기 전용과 변경 가능한 컬렉션
+
+```kotlin
+val list: List<Int>
+```
+
+불변이 아니다. 읽기 전용이지
+내부 원소가 변경될 수 있다. 예를 들어
+
+```kotlin
+fun main() {
+    val mutableList: MutableList<Int> = mutableListOf(1, 2, 3)
+    val list: List<Int> = mutableList
+
+    mutableList.add(4)
+
+    println(list)
+}
+
+// [1, 2, 3, 4]
+```
+
+그래서 읽기 전용(List<T>)이라고 해서 **thread safe**한 것은 아니다.
+
+### 코틀린 컬렉션과 자바
+
+[https://jik3410.tistory.com/18](https://jik3410.tistory.com/18)
+
+코틀린 컬렉션과 자바 컬렉션은 호환이 잘 되어있다.
+
+그래서 코틀린 읽기 전용 컬렉션을 자바 컬렉션으로 넘길 수 있다.
+
+그런데 자바 컬렉션은 읽기 전용이라는 개념이 없어서 변경이 가능하다.
+
+그렇기에 코틀린에서 자바 코드에 List 로 넘겨도 자바 코드에선 그냥 내부에 원소를 추가할 수가 있다.
+
+코틀린 컴파일러가 이를 막을 순 없기에, 자바 코드에서 컬렉션을 변경할지 여부에 따라 올바른 파라미터 타입을 사용할 책임은 개발자에게 있다.
+
+예를 들어,
+
+코틀린에선 읽기 전용(`Collection`)으로 리스트를 만들었는데, 자바에서 해당 리스트 내부를 변경할 가능성이 있다면
+코틀린에서 그냥 변경 가능 리스트(`MutableCollection`)로 만드는게 낫다.
+
+오히려 코드를 읽는 개발자와 추후의 나에게 인지부조화를 오게 한다.
+
+(추가로 코틀린에선 `non-null` 타입의 Collection 타입이라도 자바에 넘겨주면 `null` 을 넣을 수도 있다.)
+
+### 객체의 배열과 원시 타입의 배열
+
+코틀린에서 `Array<Int>` 타입으로 배열을 선언하면 해당 배열은 자바의 박싱된 정수의 배열(`java.lang.Integer []`)이다.
+
+그래서 박싱하지 않은 원시 타입의 배열이 필요하다면 `IntArray`, `BooleanArray` 등과 같은 특별한 배열 클래스를 사용해야한다. 해당 배열들이 컴파일 되면 자바 원시 타입
+배열인 `int []`, `boolean []` 등으로 컴파일 된다. 그래서 효율적!
